--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<a href="#" onclick="openSlideMenu()"
 			<a href="#">
 				<svg width="30" height="30" >
-					<path d="M0,5 30, 5" stroke = "grey"
+					<path d="M0,5 30, 5" stroke = "#fff"
 					stroke-width="5"/>
-					<path d= "M0, 14 30, 14" stroke="grey"
+					<path d= "M0, 14 30, 14" stroke="#fff"
 					stroke-width="5"/>
-					<path d="M0, 23 30 ,23" stroke="grey"
+					<path d="M0, 23 30 ,23" stroke="#fff"
 					stroke-width="5"/>
 				</svg>
 			</a>
@@ -40,10 +40,10 @@
 		<a href="#" class="btn-close"
 		onclick="closeSlideMenu()">&times;</a>
 		<a href="#"><img class="bulb" src="lightbulb-regular.svg"> Notes</a><br>
-		<a href="#"><img class="bell" src="bell-solid.svg">  Reminders</a><br>
-		<a href ="#"><img class="pen" src="pen-solid.svg"> Edit labels</a><br>
-		<a href="#"><img class="box" src="box-archive-solid.svg"> Archive</a><br>
-		<a href ="#"><img class="trash" src="trash-solid.svg"> Trash</a><br>
+		<a href="#">  <img class="bell" src="bell-solid.svg">  Reminders</a><br>
+		<a href ="#">  <img class="pen" src="pen-solid.svg"> Edit labels</a><br>
+		<a href="#">  <img class="box" src="box-archive-solid.svg"> Archive</a><br>
+		<a href ="#">  <img class="trash" src="trash-solid.svg"> Trash</a><br>
 		<i class="fa-solid fa-lightbulb"></i>
 
 	</div>
